$Id: NEWS,v 1.392 2003-03-06 02:15:41 castaglia Exp $

CVS
---------------------------------
- Bug 1828 - mod_sql can only find mysql.sock if in /tmp.  This was caused
  by the fact that mod_sql_mysql did not load/read the MySQL .cnf
  configuration files.  Now, when starting, mod_sql_mysql will read .cnf
  files for "proftpd" and "client" sections.
- Bug 1960 - Add removed file size by DELE command to xferlog.
- Bug 1967 - Add display of uptime to ftpwho, ftptop.
- Added AnonRejectPasswords directive.
- Added ftpshut -D command-line option, for deleting the ftpshut shutdown
  file.
- Bug 1972 - %T not correctly shows time at performance of a command "rename".
  This was due to improper use of uninitialized data.
- Bug 1794 - Scoreboard format changes.
- Bug 1979 - Add TLSTimeoutHandshake directive.  This adds a directive to
  configure a timer when SSL/TLS handshakes are occurring, to prevent
  a malicious client from attempting to DOS a TLS-enabled server.  The default
  timeout is 5 minutes.
- Bug 1869 - Add option "-S/--server" to ftpcount, ftptop, ftpwho.  This
  option can be used to specify a ServerName; the utilities will then
  display information for that specific server.
- Bug 1980 - Login with incorrect password possible when using mod_radius.
  This was caused by the retaining of the OK state when a user authenticated
  via RADIUS, but the login process later fails (e.g. home directory
  inaccessible or something similar); subsequent logging in as a different
  user would succeed because the OK flag was not cleared.
- Added mod_ifsession-0.9rc6.

1.2.8 - Released 04-Mar-2003
---------------------------------
- Bug 1863 - Unable to build under UnixWare 7
- Bug 1943 - Unable to install on FreeBSD 5.0.  FreeBSD 5.0's header files
  have been rewritten, and glibc's glob.h collided with the new files.  The
  fix was simply to use size_t, rather than trying to determine and use
  __size_t (glob.h was intended to be used during library compilation, not